# fastapi_sqlalchemy_template

./: .example.env  .gitignore  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: cbe4bd643234_init_migration.py
api/: router.py
api/endpoints/: __init__.py  users.py
crud/: base_crud.py  user_crud.py
db/: session.py
models/: __init__.py  base_model.py  user_model.py
serializers/: __init__.py  base_schema.py  user_schema.py
tests/: conftest.py
tests/endpoints/users/: __init__.py  test_create_user.py  test_delete_user.py  test_get_user.py  test_get_users_by_query.py  test_update_user.py
tests/test_utils/model_factories/: users_factory.py
