[tool.poetry]
name = "fastapi-sqalchemy-template"
version = "0.1.0"
description = ""
authors = ["Hatesnake69 <vladimir@itsy.dev>"]
readme = "README.md"
packages = [{include = "fastapi_sqalchemy_template"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
