[tool.poetry]
name = "fastapi-sqalchemy-template"
version = "0.1.0"
description = ""
authors = ["Hatesnake69 <vladimir@itsy.dev>"]
readme = "README.md"
packages = [{include = "fastapi_sqalchemy_template"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
sqlalchemy = "^2.0.9"
python-dotenv = "^1.0.0"
alembic = "^1.10.3"
psycopg2-binary = "^2.9.6"
asyncpg = "^0.27.0"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
